# emu_book_exchange

./: .gitignore  README.md  pyproject.toml  shell.nix
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py
client/: README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/emu_book_exchange/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  temp.dart
client/test/: widget_test.dart
client/web/: index.html  manifest.json
server/: settings.py
