[project]
name = "emu-book-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.1",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-types>=0.20.0",
]
